--- a/templates/booking.html
+++ b/templates/booking.html
@@ -57,6 +57,9 @@
                                 </select> <span class="select-arrow"></span> <span class="form-label">Storage</span>
                             </div>
                             <div class="form-group">
+                                <input type="number" min="1" name="no_of_units" id="no_of_units" placeholder="number of units">
+                            </div>
+                            <div class="form-group">
                                 {{form.departure_date}}
                                 <span class="form-label text-info">Check Out Date</span> </div>
                         </div>
