--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 
 {% load static %}
@@ -130,7 +131,19 @@
 
   </div>
 </div>
-
+<div class="container-fluid text-center">
+  <h1>Subscribe To Our Emailing Service</h1>
+    {% if messages %}
+        {% for message in messages %}
+            <p style="color:green">{{ message }}</p>
+        {% endfor %}
+    {% endif %}
+    <form action="{% url 'subscribe' %}" method="POST">
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        <input type="submit" value="Submit">
+    </form>
+</div>
 
 
 <section class="site-section" id="about-section">
