Put logic to automatically choose pick up when booking

--- a/templates/request_transport.html
+++ b/templates/request_transport.html
@@ -20,6 +20,8 @@
                     </div>
                 </div>
             </div>
+            {{initial_units}}
+            {{final_units}}
             <div id="form" style="display: none;">
                 <h1 class="text-center">REQUEST TRANSPORT</h1>
                 <form method="POST" action="{%url 'request_transport'%}" class="form-group" style="margin-top: 5em;">
