--- a/templates/request_transport.html
+++ b/templates/request_transport.html
@@ -20,11 +20,16 @@
                     </div>
                 </div>
             </div>
-            {{initial_units}}
-            {{final_units}}
             <div id="form" style="display: none;">
                 <h1 class="text-center">REQUEST TRANSPORT</h1>
+                
                 <form method="POST" action="{%url 'request_transport'%}" class="form-group" style="margin-top: 5em;">
+                    {%if initial_units > final_units %}
+                    <h3>TRANSPORT REQUEST: PICK-UP</h3><br>
+                    {%elif final_units > initial_units %}
+                    <h3>DELIVERY TRANSPORT REQUEST: DELIVERY</h3><br>
+                    
+                    {%endif%}
                     {% csrf_token %}
                     {{ form|crispy }}
                     
