--- a/templates/request_summary.html
+++ b/templates/request_summary.html
@@ -12,6 +12,7 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10 pt-5">
+            <p class="mt-5 text-center text-success" style="border: 1px solid gray;">Check your e-mail for a copy of this transport summary.</p>
             <div class="card mt-5 mx-5 mb-1 p-0" style="border: 2px solid ; border-radius: 10px;">
                 <div class="row g-0">
                     <div class="col-md-4 " >
@@ -47,10 +48,10 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex flex-row-reverse bd-highlight">
+            <!-- <div class="d-flex flex-row-reverse bd-highlight">
                 <div class="p-2 bd-highlight"><a class="btn btn-success mx-5 mb-5 mt-0" href="{%url 'payment'%}" role="button">PROCEED TO PAYMENT</a>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="col-md-1"></div>
     </div>
