Staff can approve a request and an email is sent to the user

--- a/templates/request_summary.html
+++ b/templates/request_summary.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10 pt-5">
-            <p class="mt-5 text-center text-success" style="border: 1px solid gray;">Check your e-mail for a copy of this transport summary.</p>
+            <p class="mt-5 text-center text-success" style="border: 1px solid gray;">Check your e-mail for a copy of this transport summary and further instructions.</p>
             <div class="card mt-5 mx-5 mb-1 p-0" style="border: 2px solid ; border-radius: 10px;">
                 <div class="row g-0">
                     <div class="col-md-4 " >
