--- a/templates/transport_summary_email.html
+++ b/templates/transport_summary_email.html
@@ -15,7 +15,7 @@
 
 <body>
     <p>Dear {{request_transport.user.first_name|title}}, <br>
-        Find a summary of your transport request below. Your request is yet to be approved. Check your email for an update to the approval status. Once your request has been approved, procced to payment.</p><hr>
+        Find a summary of your transport request below. Your request is yet to be approved. Check your email for an update of the approval status. Once your request has been approved, procced to payment.</p><hr>
     <div class="col-md-6">
         <div class="card mt-5 mx-5 mb-1 p-0" style="border: 2px solid ; border-radius: 10px;">
             <div class="row g-0">
