modify edit profile.html

--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -37,7 +37,7 @@
                     {% csrf_token %}
                     <fieldset class="form-group">
                     
-                    {% bootstrap_form user_form %}
+                    {% bootstrap_form form %}
                     </fieldset>
                     <div class="form-group">
                         <input type="submit" class="btn btn-outline-dark bg-dark text-white" value="Update" />
