Modify payment logic

--- a/templates/payment.html
+++ b/templates/payment.html
@@ -11,7 +11,7 @@
             <div class="card mt-5 mx-5 mb-1 p-0" style="border: 2px solid ; border-radius: 10px;">
                 <div class="row g-0">
                     <div class="col-md-4 " >
-                        <img src="https://images.pexels.com/photos/4199524/pexels-photo-4199524.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid rounded-start" alt="image of shipping boxes" style="height: 100%; border-radius: 10px;">
+                        <img src="https://images.pexels.com/photos/4199524/pexels-photo-4199524.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img-fluid rounded-start" alt="image of payment" style="height: 100%; border-radius: 10px;">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body p-5">
