checkout transport logic

--- a/templates/request_summary.html
+++ b/templates/request_summary.html
@@ -48,10 +48,10 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="d-flex flex-row-reverse bd-highlight">
                 <div class="p-2 bd-highlight"><a class="btn btn-success mx-5 mb-5 mt-0" href="{%url 'payment'%}" role="button">PROCEED TO PAYMENT</a>
                 </div>
-            </div> -->
+            </div>
         </div>
         <div class="col-md-1"></div>
     </div>
