--- a/templates/transport_approval_email.html
+++ b/templates/transport_approval_email.html
@@ -15,7 +15,7 @@
 
 <body>
     <p>Dear {{request_summary.user.first_name|title}}, <br>
-        Your {{request_summary.transport_type|title}} transport request ID#{{request_summary.id}} has been approved. Proceed to payment from your convey summaries.</p><br>
+        Your {{request_summary.transport_type|title}} transport request ID#{{request_summary.id}} has been approved. Your request is on its way!</p><br>
     <br><p>Kind regards,<br>StoreCentre254 Management</p>
 </body>
 </html>
