Fix mpesa payment

--- a/templates/request_transport.html
+++ b/templates/request_transport.html
@@ -49,12 +49,16 @@
                     <h3>TRANSPORT REQUEST: PICK-UP</h3><br>
                     {%elif initial_units < final_units %}
                     <h3>DELIVERY TRANSPORT REQUEST: DELIVERY</h3><br>
-                    
                     {%endif%}
-            <div id="form" style="display: none;background-image: url(/static/images/yellow-forklift-with-empty-fork-parking-white-background-transportation-industrial-concept-copy-space_10307-1385.jpg);background-repeat: no-repeat;background-position-x: -205px;">
+                    {% csrf_token %}
+                    {{form|crispy}}
+                    <button type="submit" class="btn btn-success">SUBMIT</button>
+                </form>
+            </div>
+            <!-- <div id="form" style="display: none;background-image: url(/static/images/yellow-forklift-with-empty-fork-parking-white-background-transportation-industrial-concept-copy-space_10307-1385.jpg);background-repeat: no-repeat;background-position-x: -205px;">
                 <form method="POST" action="{%url 'request_transport'%}" style="margin-top: 5em;">
                     {% csrf_token %}
-                    <!-- {{form|crispy}} -->
+                    {{form|crispy}}
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
@@ -89,7 +93,6 @@
                                             </div>
                                             <div class="col-md-11">
                                                 <div class="form-group">
-                                                    <!-- {{ form.phone_number|add_class:"form-control" }} -->
                                                     {% render_field form.phone_number|add_class:"form-control text-dark"|append_attr:"" type="text" placeholder="Your Phone Number" style="opacity: 1;background-image:white;border:none;" %}
                                                 </div>
                                                 <button style="border-radius: 5px;" type="submit" class="btn btn-dark btn-sm text-hov-white pull-right">SUBMIT <img width="30" src="https://img.icons8.com/color/48/000000/delivery--v2.png"/> </button>
@@ -109,9 +112,6 @@
                         </div>
                         </div>
 
-                    <!-- Button trigger modal -->
-
-                    <!-- Modal -->
                     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                         tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </form>
-            </div>
+            </div> -->
         </div>
         <div class="col-sm-2"></div>
     </div>
