--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <h1 class="text-shadow">Secure <br> Storage For Your goods</h1>
             <p class="mb-5 text-shadow">Keeping goods safe from damage,loss or theft ...<a href="" target="_blank">store.com</a>
             </p>
-            <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
+            <p><a href="/units/book/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
 
           </div>
         </div>
