--- a/templates/client_login.html
+++ b/templates/client_login.html
@@ -73,9 +73,9 @@
                     </a>
                 </div>
                 
-                <div class="container text-center">
+                <!-- <div class="container text-center">
                     <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="/static/images/signup/signin-button.png" width="210" alt=""></a>
-                </div>
+                </div> -->
                 <div class="text-center p-t-16">
                     <p>Don't have an account ? <a class="txt2" href="/client_register/"><strong> SignUp</strong></a></p>
                 </div>
