change lorem ipsum to meaningful sentences

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -97,16 +97,15 @@
                     <div class="container">
                         <div class="col-md-12">
                             <p>
-                                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                                architecto
-                                beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-                                aspernatur aut
-                                odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                                nesciunt."<br><br>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum odio molestiae nobis
-                                corrupti fugiat modi minus et ullam tempore harum, nostrum reprehenderit voluptates quod
-                                dolores quibusdam quaerat. Necessitatibus, sit similique.
+                                Warehousing allows for timely delivery and optimized distribution, <br>
+                                leading to increased labor productivity and greater customer satisfaction.<br>
+                                It also helps reduce errors and damage in the order fulfillment process. Plus,<br> 
+                                it prevents your goods from getting lost or stolen during handling.
+                                The demand for goods and services varies from month to month and year <br>
+                                to year, depending on customers' income, government policies, employment <br>
+                                rates, climatic conditions and other factors. A warehouse allows you to store <br>
+                                your products for a later date when the demand is high. This helps ensure price stabilization<br>
+                                 and reduces revenue losses.
 
                             </p>
                         </div>
