--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,16 +33,19 @@
             <li><a href="/delivery/transport-summaries/" class="nav-link">Convey Summary</a></li>
             {% if user.is_authenticated %}
             {% else %}
-            <li><a href="/client_register/" class="nav-link">Register</a></li>
-            {% endif %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Register
+              </a>
+                {% endif %}
               <div class="dropdown-menu" style="background-color: rgba(127, 255, 212, 0.671);"
                 aria-labelledby="navbarDropdown">
                 {% if user.is_authenticated %}
                 {% else %}
                 <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/client_register/">As Client</a>
-                
+                <a style="border-radius: 50px;" class="text-dark dropdown-item" href="/staff_register/">As Staff</a>
                 {% endif %}
-
               </div>
             </li>
             <li class="nav-item dropdown">
