--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1200,8 +1200,15 @@ p {
     box-shadow: 0 10px 25px -2px rgba(0, 110, 255, 0.6);
 }
 
+.toggle-password {
+    float: right;
+    cursor: pointer;
+    margin-right: 10px;
+    margin-top: -25px;
+}
 
 
 
 
-  /*------------------------------------------------------------------
+
+/*------------------------------------------------------------------
