--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900|Oswald:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="/static/fonts/icomoon/style.css">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/jquery-ui.css">
   <link rel="stylesheet" href="/static/css/owl.carousel.min.css">
@@ -105,6 +105,7 @@
     <script src="/static/js/main.js"></script>
     <script src="/static/js/grunt.js"></script>
     <script src="/static/js/loginform.js"></script>
+    <script src="/static/js/pass.js"></script>
     <script>
       $('.js-tilt').tilt({
         scale: 1.1
