--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -4,8 +4,30 @@
 {% load static %}
 
 {% block content %}
-<div class="container" style="min-height:75vh;">
-    <div class="summary mt-5 row" style="padding-top:20%;">
+
+<div class="overlay"
+    style="box-shadow:inset 0 0 0 2000px rgba(23, 34, 23, 0.863);background-image: url(/static/images/hero_1.jpg);color: white;"
+    data-aos="fade" id="home-section">
+
+
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-6 mt-lg-5 text-center">
+                <br><br>
+                <h1>Checkout</h1>
+                <div style="margin-bottom: 10px;">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <a href="#bs" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
+</div>
+
+
+
+<div class="container" style="min-height:45vh;margin-top: 100px;">
+    <div class="summary mt-5 row" >
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
             <div class="card">
