--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,7 @@
+{% load bootstrap4 %}
+{% load widget_tweaks %}
+{% load static %}
+{% block content %}
 <footer class="site-footer" style="margin-bottom: 300px;">
     <div class="container" >
       <div class="row">
@@ -22,14 +26,34 @@
         <div class="col-md-4">
           <div class="mb-4">
             <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-          <form action="#" method="post" class="footer-subscribe">
+          <form action="{% url 'subscribe' %}" method="post" class="footer-subscribe">
+            {% csrf_token %}
             <div class="input-group mb-3">
-              <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
+              <input type="email" name="email" class="form-control border-secondary text-white bg-transparent" required placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
               <div class="input-group-append">
-                <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>
+                <button class="btn btn-primary text-black" type="submit" id="button-addon2">Send</button>
               </div>
             </div>
-          </form>  
+          </form> 
+
+          <!-- <div class="container-fluid text-center">
+            <h1>Subscribe To Our Emailing Service</h1>
+              {% if messages %}
+                  {% for message in messages %}
+                      <p style="color:green">{{ message }}</p>
+                  {% endfor %}
+              {% endif %}
+              <form action="{% url 'subscribe' %}" method="POST">
+                  {% csrf_token %}
+                  <div class="form-group">
+                    
+                  </div>
+                  {% render_field form.email|append_attr:"required" placeholder="Your Email" %}
+                  <input type="submit" value="Submit">
+              </form>
+          </div> -->
+
+
           </div>
           
           <div class="">
@@ -56,4 +80,4 @@
 
   <a href="#top" style="border-radius: 80px;background-color: darkcyan;" class="gototop"><span class="icon-angle-double-up"></span></a>
 
- 
+ {%endblock%}
