--- a/templates/summaries.html
+++ b/templates/summaries.html
@@ -22,7 +22,7 @@
 
 
 
-<div class="container-fluid">
+<div class="container-fluid" style="background-color: azure;">
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10 pt-5 mt-5">
